# project-template

./: .gitignore  LICENSE  README.md  flake8.ini  mypy.ini  pyproject.toml
scripts/: count.sh
