[tool.poetry]
name = "project-template"
version = "1.0.0"
description = ""
authors = ["boubou19 <miisterunknown@gmail.com>"]
readme = "README.md"
packages = [{include = "project_template"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
mypy = "^1.5.1"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
isort = "^5.12.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
colour = "^0.1.5"
flake8-docstrings = "^1.7.0"
pydantic = "^2.3.0"

[tool.black]
line-length = 160
target-version = ['py311']
exclude = '''
    (
      /(
          \.eggs         # exclude a few common directories in the
        | \.git          # root of the project
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
      )
    )
    '''

[tool.isort]
src_paths = ["src"]
atomic = true
case_sensitive = true
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 160

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
